fix scrooll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ h1 {
 
 .logo {
     display: block;
-    width: 100%;
     margin-left: 65px;
     margin-bottom: 34px;
 }
